--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.11.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.14",
     "sharp": "^0.33.4"
   },
   "devDependencies": {
