--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "mongoose": "^6.11.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
-    "sharp": "^0.33.4"
+    "sharp": "^0.33.4",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
