--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@auth-kit/react-router": "^3.1.3",
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -30,6 +32,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.6",
+    "emoji-mart": "^5.6.0",
+    "emoji-picker-react": "^4.12.0",
     "javascript-time-ago": "^2.5.10",
     "lucide-react": "^0.407.0",
     "react": "^18.3.1",
