--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@auth-kit/react-router": "^3.1.3",
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.9.0",
@@ -31,13 +30,12 @@
     "@reduxjs/toolkit": "^2.2.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "depcheck": "^1.4.7",
     "embla-carousel-react": "^8.1.6",
     "emoji-mart": "^5.6.0",
-    "emoji-picker-react": "^4.12.0",
     "javascript-time-ago": "^2.5.10",
     "lucide-react": "^0.407.0",
     "react": "^18.3.1",
-    "react-auth-kit": "^3.1.3",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
@@ -49,8 +47,7 @@
     "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "vite-tsconfig-paths": "^4.3.2",
-    "zod": "^3.23.8"
+    "vite-tsconfig-paths": "^4.3.2"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
